--- a/Excersise1/assets/css/components.css
+++ b/Excersise1/assets/css/components.css
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   gap: var(--gap);
 }
 
