--- a/part-b-mean/client/src/app/pages/courses/courses.component.html
+++ b/part-b-mean/client/src/app/pages/courses/courses.component.html
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <div grid class="course-grid" id="course-list">
+    <div grid class="course-grid" id="course-list" #courseList>
       <p *ngIf="loading">Loading...</p>
       <p *ngIf="error">{{ error }}</p>
 
