--- a/part-b-mean/client/src/assets/css/layout.css
+++ b/part-b-mean/client/src/assets/css/layout.css
@@ -706,7 +706,7 @@
         transform-origin: right;
         animation: line-out 0.5s forwards;
     }
-    
+
 
     @keyframes line-in {
         from {
@@ -943,8 +943,8 @@
         padding-bottom: 0;
         gap: var(--gap-t);
     }
-    
-    .new-box-header .tag-row{
+
+    .new-box-header .tag-row {
         margin: 0;
     }
 
@@ -1347,6 +1347,7 @@
 
     .course-product {
         width: 100%;
+        height: 100%;
     }
 
     .course-info {
